Add other background colors

--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
 :root {
-    --primary-color: #845ec2
+    --primary-color: #845ec2;
+    --secondary-color: #4e8397;
+    --tertiary-color: #d5cabd;
+    --accent-color: #f9f871;
 }
 
 html {
