--- a/index.css
+++ b/index.css
@@ -12,6 +12,11 @@ html {
 .bg-primary {
     background-color: var(--primary-color);
 }
+
+header {
+    padding: 1rem;
+    color: white;
+}
 .flex {
     display: flex;
 }
