Adjust div on html, input and size hero image

--- a/index.css
+++ b/index.css
@@ -32,3 +32,10 @@ header {
 .text-center {
     text-align: center;
 }
+
+#hero {
+    background-image: url(./images/backgroundimage.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
