--- a/index.css
+++ b/index.css
@@ -9,16 +9,44 @@ html {
     font-family: 'Roboto', sans-serif;
 }
 
-.bg-primary {
-    background-color: var(--primary-color);
+p {
+ margin: 0.5rem;
 }
 
-header {
+.bg-primary {
+    background-color: var(--primary-color);
     padding: 1rem;
     color: white;
 }
+
+.bg-translucent-dark {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 1rem;
+}
+
+.button {
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    margin: 0.5rem;
+}
+
+.button--submit {
+    background-color: var(--accent-color);
+}
+
 .flex {
     display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.gap {
+    gap: 1rem;
 }
 
 .items-center {
@@ -29,13 +57,29 @@ header {
     justify-content: center;
 }
 
+.rounded {
+    border-radius: 0.5rem;
+}
+
 .text-center {
     text-align: center;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+  }
 
 #hero {
     background-image: url(./images/backgroundimage.jpg);
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    height: 50vh;
 }
