--- a/index.css
+++ b/index.css
@@ -13,10 +13,21 @@ p {
  margin: 0.5rem;
 }
 
+.bg-primary, .bg-secondary, .bg-tertiary {
+    color: white;
+    padding: 1rem;
+}
+
 .bg-primary {
     background-color: var(--primary-color);
-    padding: 1rem;
-    color: white;
+}
+
+.bg-secondary {
+    background-color: var(--secondary-color);
+}
+
+.bg-tertiary {
+    background-color: var(--tertiary-color);
 }
 
 .bg-translucent-dark {
