--- a/index.css
+++ b/index.css
@@ -117,3 +117,10 @@ input {
     background-position: center;
     height: 50vh;
 }
+
+/* Media queries with breakpoints */
+@media screen and (min-width: 768px) {
+    #hero section:first-of-type {
+      width: 100%;
+    }
+  }
